[tool.poetry]
name = "electricity-demand-forecasting"
version = "0.1.0"
description = ""
authors = ["Bryan <85406498+bryanbritten@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
